# StreetSim

./: .gitignore  README.md  cli.py  envimet_voxel_helper.py  pointcloud_helper.py  pyproject.toml  run_blend_to_solweig.py  run_image_to_blender.py  street_configurator.html  web_selector_v42.html
envimet/: blend_to_envimet_voxels.py
examples/: policy.example.json
modelling/: 01_model.py  02_textured.py  03_animated.py  04_soundscapes.py  05_render.py
pointcloud/: blend_to_pointcloud.py
properties/: Prop_1_enclosure.py  Prop_2_isovist.py  Prop_3_svf.py  Prop_4_shadefrac.py  Prop_5_6_Loud_dyna.py
solweig/: run_blend_to_solweig.py  solweig_ascii_to_geotiff.py  solweig_export_rasters.py
street_vlm/: __init__.py  defaults.py  mapper.py  ollama_client.py  openai_client.py  pipeline.py  prompts.py  schemas.py
